style.css
/* ... */
#review-btn{
  padding: 10px 20px;
  border: none;
  border-radius: 20px 0 0 20px;
  background-color:  #B19222;
  color: white;
  font-size: 16px;
  writing-mode: vertical-rl;
  cursor: pointer;
  transition: background-color 0.3s ease;
  position: absolute;
  right: 0; 
  top: 50%; 
  transform: translateY(-50%); 
  white-space: nowrap; 
  
  

}
#review-btn:hover{
  background-color:#B19222 ;
}
.button-container {
  position: fixed;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
  z-index: 200; /* Ensure it stays on top */
}

/* Modal styles */
.modal {
  
  display: none;
  flex-direction: column;
  /* flex-wrap: nowrap; */
  justify-content: center;
  align-items: center;
  position: fixed;
  z-index: 101;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  /*overflow: auto;*/
  background-color: rgba(0, 0, 0, 0.4);
}
.modal-content {
  background-color: #ffffff;
  /* margin: 10% auto; */
  padding: 50px;
  border-radius: 10px;
  width: 90%;
  max-width: 500px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
  position: relative;
    text-align: center;
}
.close {
  color: #aaa;
  float: right;
  font-size: 24px;
  font-weight: bold;
  cursor: pointer;
}
.close:hover,
.close:focus {
  color: #000;
}
.modal-content h2 {
  margin-top: 0;
  margin-bottom: 10px;
  text-align: center;
  color:black;
  font-size: 24px;
}
/* .modal-content label {
  display: block;
  margin-bottom: 8px;
  color: #666;
} */
.form-group {
  position: relative;
  margin-bottom: 20px;
}
.form-group .icon {
  position: absolute;
  top: 50%;
  left: 10px;
  transform: translateY(-50%);
  background-color: #8a2be2;
  background-color: rgb(75, 179, 75);
  color: white;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.form-group input,
.form-group textarea {
    width: 100%;
    padding: 10px 10px 10px 40px;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 14px;
}
.form-group input::placeholder,
.form-group textarea::placeholder {
    color: #bbb;
}
.form-group textarea {
  height: 80px;
  padding: 10px;
}

.modal-content button[type="submit"] {
  background: linear-gradient(to right, #8a2be2, #f163ed);
  background: linear-gradient(to right, rgb(75, 179, 75), rgb(42, 228, 42));
    color: white;
    border: none;
    border-radius: 5px;
    padding: 10px;
    font-size: 16px;
    cursor: pointer;
    width: 100%;
}

.modal-content button[type="submit"]:hover {
  background: linear-gradient(to right, #f55ef0, #8a2be2);
  background: linear-gradient(to right, rgb(63, 220, 63), rgb(20, 124, 20));
}


.modal-content button[type="submit"]:focus {
  outline: none;
}
.close:hover {
  color: #000;
}
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}
/* rating stars */
.rating {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 20px;
}
.rating h2 {
  margin: 0;
  margin-right: 10px;
  font-size: 18px;
}
.rating__star {
  font-size: 24px;
  margin: 0 5px;
  cursor: pointer;
  color: #dabd18b2;
}
.rating__star:hover,
.rating__star.active {
    color: #ffc107;
}
.footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex: wrap;
  flex-direction: column;
  padding: 1rem 0;
  background: #0e4b16;
  min-height: 25rem;
}

.footer p {
  font-size: 1.6rem;
}
.footerUpperPart {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
  width: 90vw;
  min-height: 15rem;
  margin-top: 15px;
}

.footer-title{
  font-weight: 500;
  font-size: 20px;
}

.footer-left{
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.footer-iconTop a {
  display: grid;
  justify-content: center;
  align-items: center;
  padding: 0.8rem;
  background: var(--main-color);
  border-radius: 0.8rem;
  transition: 0.5s ease;
}
.footer-iconTop a:hover {
  box-shadow: 0 0 1rem var(--main-color);
}
.footer-iconTop a i {
  font-size: 2.4rem;
  color: var(--second-color);
}

@media (max-width: 1350px) {
  html {
    font-size: 55%;
  }
  .header {
    padding: 3rem 3%;
  }
}

@media (max-width: 991px) {
  .header {
    padding: 3vmax 4vmax;
  }
  .section {
    padding: 10rem 3% 2rem;
  }
  .services {
    padding-bottom: 7rem;
  }
  .portfolio {
    padding-bottom: 7rem;
  }
  .contact {
    min-width: auto;
  }
  .footer {
    padding: 2rem 3%;
  }
}
/* ... */

